--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<title></title>
 </head>
 <body>
+	<div id="teaser">
 	<h1> Coming soon...</h1>
-	<img src="e1fdfe27227427.56361a94bcc6a.jpg">
-
+	<img id="logo" src="e1fdfe27227427.56361a94bcc6a.jpg">
+</div>
 </body>
 </html>
